# libre-lims

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  gunicorn.conf.py  main.py  manage.py  pyproject.toml
.claude/: CLAUDE.md
admissions/: admin.py  models.py  views.py
admissions/migrations/: 0001_initial.py  0002_sale_status.py
apps/admissions/: models.py  views.py
apps/billing/: context_processors.py  forms.py  middleware.py  models.py  urls.py  views.py
apps/core/: models.py
apps/exams/: admin.py  forms.py  models.py  views.py
apps/orders/: models.py  views.py
apps/patients/: forms.py  models.py  views.py
apps/pricing/: models.py  services.py  urls.py  views.py
apps/referrals/: models.py
apps/results/: models.py  services.py  views.py
billing/: admin.py  middleware.py  models.py  urls.py  views.py
exams/: admin.py  models.py  views.py
exams/migrations/: 0002_exam_code.py
libre_lims/: asgi.py  settings.py  urls.py  wsgi.py
patients/: admin.py  models.py  views.py
patients/migrations/: 0002_alter_patient_gender.py
templates/: base.html  dashboard.html  login.html
templates/admissions/: create_ticket.html  sale_detail.html  sales_list.html  ticket_print.html  ticket_styles.css
templates/billing/: company_create.html  company_settings.html
templates/exams/: bulk_upload.html  category_create.html  category_list.html  category_update.html  exam_create.html  exam_list.html  exam_update.html  exams_upload.html
templates/includes/: breadcrumbs.html  header.html  layout.html  (+2 more)
(+50 files in other folders)
