[project]
name = "libre-lims"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "django==5.2.8",
    "psycopg==3.2.3",
    "dj-database-url==2.2.0",
    "python-dotenv==1.0.1",
    "openpyxl==3.1.5",
    "weasyprint==62.3",
    "pillow==10.4.0",
    "reportlab>=4.4.5",
    "sentry-sdk==2.45.0",
]

[dependency-groups]
production = [
    "gunicorn==23.0.0",
]


[project.optional-dependencies]
local = [
    "ruff==0.8.4",
    "pre-commit==4.0.1",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
